[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "raon-opentts"
version = "0.1.0"
description = "RAON-OpenTTS: Training and data filtering for text-to-speech"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "accelerate>=1.0.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "datasets>=3.0.0",
    "ema-pytorch>=0.7.0",
    "tqdm>=4.60.0",
    "soundfile>=0.12.0",
    "numpy>=2.0.0",
    "jieba>=0.42.0",
    "pypinyin>=0.50.0",
    "transformers>=4.40.0",
    "einops>=0.8.0",
    "x-transformers>=2.0.0",
    "safetensors>=0.4.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
eval = [
    "jiwer",
    "speechmos",
    "scipy",
    "ray[default]",
    "openai-whisper",
]
vocos = [
    "vocos",
]

[project.scripts]
f5-train = "f5_tts.train.train:main"
f5-eval = "f5_tts.eval.run_infer_eval:main"

[project.urls]
Homepage = "https://github.com/KRAFTON/RAON-OpenTTS"

[tool.setuptools.packages.find]
where = ["src"]
include = ["f5_tts*"]
